--- a/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
+++ b/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Abstract\Transactions\Arguments\ISetOnEmptyArgs.cs" />
     <Compile Include="Abstract\Transactions\Arguments\ISetOnInsertArgs.cs" />
     <Compile Include="Abstract\Transactions\Arguments\ISetOnRemoveArgs.cs" />
+    <Compile Include="Abstract\Transactions\ITransactional.cs" />
     <Compile Include="Abstract\Transactions\IUpdateListQuery.cs" />
     <Compile Include="Abstract\Transactions\IUpdateSetQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
