--- a/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
+++ b/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
@@ -53,10 +53,12 @@
     <Compile Include="Abstract\Transactions\Arguments\ISetOnEmptyArgs.cs" />
     <Compile Include="Abstract\Transactions\Arguments\ISetOnInsertArgs.cs" />
     <Compile Include="Abstract\Transactions\Arguments\ISetOnRemoveArgs.cs" />
+    <Compile Include="Abstract\Transactions\Arguments\ISetOnReplaceArgs.cs" />
     <Compile Include="Abstract\Transactions\ITransactional.cs" />
     <Compile Include="Abstract\Transactions\IUpdateListQuery.cs" />
     <Compile Include="Abstract\Transactions\IUpdateSetQuery.cs" />
     <Compile Include="Extensions\InternalExtensions.cs" />
+    <Compile Include="Implementation\Transactions\UpdateListQuery.cs" />
     <Compile Include="Implementation\Transactions\UpdateSetQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
