redesign Set to Collection

--- a/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
+++ b/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
@@ -38,27 +38,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\Collections\INotifyListChanged.cs" />
-    <Compile Include="Abstract\Collections\INotifySetChanged.cs" />
+    <Compile Include="Abstract\Collections\INotifyCollectionChanged.cs" />
     <Compile Include="Abstract\Collections\IObservableList.cs" />
     <Compile Include="Abstract\Collections\IObservableReadOnlyList.cs" />
-    <Compile Include="Abstract\Collections\IObservableReadOnlySet.cs" />
-    <Compile Include="Abstract\Collections\IObservableSet.cs" />
+    <Compile Include="Abstract\Collections\IObservableReadOnlyCollection.cs" />
+    <Compile Include="Abstract\Collections\IObservableCollection.cs" />
     <Compile Include="Abstract\Transactions\Arguments\IListOnClearArgs.cs" />
     <Compile Include="Abstract\Transactions\Arguments\IListOnEmptyArgs.cs" />
     <Compile Include="Abstract\Transactions\Arguments\IListOnInsertArgs.cs" />
     <Compile Include="Abstract\Transactions\Arguments\IListOnMoveArgs.cs" />
     <Compile Include="Abstract\Transactions\Arguments\IListOnRemoveArgs.cs" />
     <Compile Include="Abstract\Transactions\Arguments\IListOnReplaceArgs.cs" />
-    <Compile Include="Abstract\Transactions\Arguments\ISetOnClearArgs.cs" />
-    <Compile Include="Abstract\Transactions\Arguments\ISetOnEmptyArgs.cs" />
-    <Compile Include="Abstract\Transactions\Arguments\ISetOnInsertArgs.cs" />
-    <Compile Include="Abstract\Transactions\Arguments\ISetOnRemoveArgs.cs" />
-    <Compile Include="Abstract\Transactions\Arguments\ISetOnReplaceArgs.cs" />
+    <Compile Include="Abstract\Transactions\Arguments\ICollectionOnClearArgs.cs" />
+    <Compile Include="Abstract\Transactions\Arguments\ICollectionOnEmptyArgs.cs" />
+    <Compile Include="Abstract\Transactions\Arguments\ICollectionOnInsertArgs.cs" />
+    <Compile Include="Abstract\Transactions\Arguments\ICollectionOnRemoveArgs.cs" />
+    <Compile Include="Abstract\Transactions\Arguments\ICollectionOnReplaceArgs.cs" />
     <Compile Include="Abstract\Transactions\ITransactional.cs" />
     <Compile Include="Abstract\Transactions\IUpdateListQuery.cs" />
-    <Compile Include="Abstract\Transactions\IUpdateSetQuery.cs" />
+    <Compile Include="Abstract\Transactions\IUpdateCollectionQuery.cs" />
     <Compile Include="Extensions\InternalExtensions.cs" />
-    <Compile Include="Implementation\Collections\ObservableSet.cs" />
+    <Compile Include="Implementation\Collections\ObservableList.cs" />
+    <Compile Include="Implementation\Collections\ObservableCollection.cs" />
     <Compile Include="Implementation\Transactions\Transaction.cs" />
     <Compile Include="Implementation\Transactions\UpdateListQuery.cs" />
     <Compile Include="Implementation\Transactions\UpdateSetQuery.cs" />
