--- a/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
+++ b/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Implementation\Operations\CollectionSelectOperation.cs" />
     <Compile Include="Implementation\Operations\CollectionToCollectionOperationBase.cs" />
     <Compile Include="Implementation\Operations\CollectionToListOperationBase.cs" />
+    <Compile Include="Implementation\Operations\CollectionWhereOperation.cs" />
     <Compile Include="Implementation\Operations\ListSelectOperation.cs" />
     <Compile Include="Implementation\Operations\ListToListOperationBase.cs" />
     <Compile Include="Implementation\Transactions\Transaction.cs" />
