implemented Where from List to List

--- a/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
+++ b/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Implementation\Operations\CollectionWhereOperation.cs" />
     <Compile Include="Implementation\Operations\ListSelectOperation.cs" />
     <Compile Include="Implementation\Operations\ListToListOperationBase.cs" />
+    <Compile Include="Implementation\Operations\ListWhereOperation.cs" />
     <Compile Include="Implementation\Transactions\Transaction.cs" />
     <Compile Include="Implementation\Transactions\UpdateListQuery.cs" />
     <Compile Include="Implementation\Transactions\UpdateSetQuery.cs" />
