--- a/src/ReactiveCollections/ReactiveCollections.Tests/ReactiveCollections.Tests.csproj
+++ b/src/ReactiveCollections/ReactiveCollections.Tests/ReactiveCollections.Tests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="ObservableCollectionTest.cs" />
     <Compile Include="ObservableCollectionWrapTest.cs" />
     <Compile Include="ObservableListTest.cs" />
+    <Compile Include="ObservableListWrapTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
@@ -134,6 +135,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="JetBrains.Annotations.PCL328">
+      <HintPath>..\packages\JetBrains.Annotations.9.1.1\lib\portable-net4+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\JetBrains.Annotations.PCL328.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
