--- a/src/ReactiveCollections/ReactiveCollections.Tests/ReactiveCollections.Tests.csproj
+++ b/src/ReactiveCollections/ReactiveCollections.Tests/ReactiveCollections.Tests.csproj
@@ -100,6 +100,7 @@
     <Compile Include="ObservableCollectionWhereTest.cs" />
     <Compile Include="ObservableCollectionWrapTest.cs" />
     <Compile Include="ObservableListTest.cs" />
+    <Compile Include="ObservableListWhereTest.cs" />
     <Compile Include="ObservableListWrapTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
