--- a/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
+++ b/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Implementation\Collections\ObservableCollection.cs" />
     <Compile Include="Implementation\Operations\CollectionSelectManyOperation.cs" />
     <Compile Include="Implementation\Operations\CollectionSelectOperation.cs" />
+    <Compile Include="Implementation\Operations\CollectionSortOperation.cs" />
     <Compile Include="Implementation\Operations\CollectionToCollectionOperationBase.cs" />
     <Compile Include="Implementation\Operations\CollectionToListOperationBase.cs" />
     <Compile Include="Implementation\Operations\CollectionWhereOperation.cs" />
