--- a/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
+++ b/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
@@ -78,7 +78,9 @@
     <Compile Include="Implementation\Operations\ListSkipAndTakeOperation.cs" />
     <Compile Include="Implementation\Operations\ListToListOperationBase.cs" />
     <Compile Include="Implementation\Operations\ListWhereOperation.cs" />
-    <Compile Include="Implementation\Operations\ObservableExtensions.cs" />
+    <Compile Include="Implementation\ObservableExtensions.cs" />
+    <Compile Include="Implementation\Threading\DispatcherToCollection.cs" />
+    <Compile Include="Implementation\Threading\DispatcherToList.cs" />
     <Compile Include="Implementation\Transactions\Transaction.cs" />
     <Compile Include="Implementation\Transactions\UpdateListQuery.cs" />
     <Compile Include="Implementation\Transactions\UpdateCollectionQuery.cs" />
