--- a/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
+++ b/src/ReactiveCollections/ReactiveCollections/ReactiveCollections.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Abstract\Transactions\IUpdateCollectionQuery.cs" />
     <Compile Include="Domain\IObservableValue.cs" />
     <Compile Include="Implementation\Functions\CollectionCountFunction.cs" />
+    <Compile Include="Implementation\Functions\ListFirstOrDefaultFunction.cs" />
     <Compile Include="Implementation\ObservableValue.cs" />
     <Compile Include="Domain\ValueChangedArgs.cs" />
     <Compile Include="Extensions\ObservableExtensions.cs" />
